--- a/Source/Moq.Analyzers/Diagnostic.nuspec
+++ b/Source/Moq.Analyzers/Diagnostic.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>Moq.Analyzers</id>
-    <version>0.0.4</version>
+    <version>0.0.6</version>
     <title>Moq.Analyzers</title>
     <authors>Andrey "Litee" Lipatkin</authors>
     <owners>Andrey "Litee" Lipatkin</owners>
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Roslyn analyzer that helps to write unit tests using Moq mocking library by highlighting typical errors and suggesting quick fixes. Port of Resharper extension to Roslyn. Find the full list of detected issues at project GitHub page.</description>
     <releaseNotes></releaseNotes>
-    <copyright>2015-2017 Andrey Lipatkin</copyright>
+    <copyright>2015-2019 Andrey Lipatkin</copyright>
     <tags>moq, mock, test, analyzers</tags>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" targetFramework="" />
