--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,16 +39,13 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release
 
-    # TODO: Create a TRX report and upload as an artifact. Tracked by #22. 
-    # - name: Publish Test Report
-    #   uses: dorny/test-reporter@v1
-    #   if: success() || failure()
-    #   with:
-    #     name: .NET Test Report (${{ matrix.os }})
-    #     path: "artifacts/TestResults/**/*.trx"
-    #     reporter: dotnet-trx
-    #     fail-on-error: true
-    #     fail-on-empty: true
+    - name: Publish Test Report
+      uses: actions/upload-artifact@v4
+      if: success() || failure()
+      with:
+        name: .NET Test Reports (${{ matrix.os }})
+        path: "artifacts/TestResults/**/*.trx"
+        if-no-files-found: error
 
     - name: Upload binlogs
       uses: actions/upload-artifact@v4
