--- a/.gitattributes
+++ b/.gitattributes
@@ -89,6 +89,11 @@
 *.csx      text diff=csharp
 *.sln      text eol=crlf
 *.csproj   text eol=crlf
+
+*.verified.txt  text eol=lf working-tree-encoding=UTF-8
+*.verified.xml  text eol=lf working-tree-encoding=UTF-8
+*.verified.json text eol=lf working-tree-encoding=UTF-8
+
 # Apply override to all files in the directory
 *.md linguist-detectable
 # Basic .gitattributes for a PowerShell repo.
