--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 # Common settings that generally should always be used with your language specific settings
+# A combination from https://github.com/gitattributes/gitattributes
 
 # Auto detect text files and perform LF normalization
-*          text=auto
+*          text=auto encoding=UTF-8
 
 #
 # The above will handle all files NOT found below
@@ -52,10 +53,11 @@
 *.fish     text eol=lf
 *.sh       text eol=lf
 *.zsh      text eol=lf
+
 # These are explicitly windows files and should use crlf
 *.bat      text eol=crlf
 *.cmd      text eol=crlf
-*.ps1      text eol=crlf
+
 
 # Serialisation
 *.json     text
@@ -81,9 +83,8 @@
 .gitattributes export-ignore
 .gitignore     export-ignore
 .gitkeep       export-ignore
-# Auto detect text files and perform LF normalization
-*          text=auto
 
+# CSharp files
 *.cs       text diff=csharp
 *.cshtml   text diff=html
 *.csx      text diff=csharp
@@ -94,8 +95,6 @@
 *.verified.xml  text eol=lf working-tree-encoding=UTF-8
 *.verified.json text eol=lf working-tree-encoding=UTF-8
 
-# Apply override to all files in the directory
-*.md linguist-detectable
 # Basic .gitattributes for a PowerShell repo.
 
 # Source files
