--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,9 @@
 # Common settings that generally should always be used with your language specific settings
 # A combination from https://github.com/gitattributes/gitattributes
+# We normalize the repo line endings to LF and backstop with .editorconfig
 
 # Auto detect text files and perform LF normalization
-*          text=auto encoding=UTF-8
+*          text=auto eol=lf encoding=UTF-8
 
 #
 # The above will handle all files NOT found below
@@ -26,7 +27,7 @@
 *.adoc     text
 *.textile  text
 *.mustache text
-*.csv      text eol=crlf
+*.csv      text
 *.tab      text
 *.tsv      text
 *.txt      text
@@ -49,14 +50,14 @@
 *.eps      binary
 
 # Scripts
-*.bash     text eol=lf
-*.fish     text eol=lf
-*.sh       text eol=lf
-*.zsh      text eol=lf
+*.bash     text
+*.fish     text
+*.sh       text
+*.zsh      text
 
-# These are explicitly windows files and should use crlf
-*.bat      text eol=crlf
-*.cmd      text eol=crlf
+# These are explicitly windows files and could use crlf, but all the tools support lf
+*.bat      text
+*.cmd      text
 
 
 # Serialisation
@@ -88,9 +89,10 @@
 *.cs       text diff=csharp
 *.cshtml   text diff=html
 *.csx      text diff=csharp
-*.sln      text eol=crlf
-*.csproj   text eol=crlf
+*.sln      text
+*.csproj   text
 
+# See https://github.com/VerifyTests/Verify?tab=readme-ov-file#text-file-settings
 *.verified.txt  text eol=lf working-tree-encoding=UTF-8
 *.verified.xml  text eol=lf working-tree-encoding=UTF-8
 *.verified.json text eol=lf working-tree-encoding=UTF-8
@@ -99,13 +101,13 @@
 
 # Source files
 # ============
-*.ps1      text eol=crlf
-*.ps1x     text eol=crlf
-*.psm1     text eol=crlf
-*.psd1     text eol=crlf
-*.ps1xml   text eol=crlf
-*.pssc     text eol=crlf
-*.psrc     text eol=crlf
-*.cdxml    text eol=crlf
+*.ps1      text
+*.ps1x     text
+*.psm1     text
+*.psd1     text
+*.ps1xml   text
+*.pssc     text
+*.psrc     text
+*.cdxml    text
 # Fix syntax highlighting on GitHub to allow comments
 .vscode/*.json linguist-language=JSON-with-Comments
